# smithy-dafny

./: .gitmodules  Makefile  README.md  SmithyDafnyMakefile.mk
 design/: README.MD
 designs/: README.MD  detailed-diagrams.md
.github/workflows/: format.yml  manual.yml  nightly_dafny.yml  pull.yml  push.yml  smithy-dafny-conversion.yml  smithy-polymorph.yml  test_models_dafny_verification.yml  test_models_go_tests.yml  test_models_java_tests.yml  test_models_net_tests.yml  test_models_polymorph_code_gen.yml  test_models_python_tests.yml  test_models_rust_tests.yml
TestModels/: .gitignore
TestModels/CallingAWSSDKFromLocalService/: Makefile
TestModels/CallingAWSSDKFromLocalService/runtimes/rust/: Cargo.toml
TestModels/CallingAWSSDKFromLocalService/runtimes/rust/src/: ddb.rs  kms.rs  lib.rs
TestModels/Constraints/: Makefile
TestModels/Constructor/: Makefile
TestModels/Dependencies/: Makefile
TestModels/Extendable/: smithy-build.json
TestModels/MultipleModels/: Makefile
TestModels/OrphanedShapes/: Makefile  README.md
TestModels/ReservedWords/: Makefile
TestModels/SQSExtended/: README.md  build.gradle.kts  smithy-build.json
TestModels/Streaming/: Makefile  README.md
cfn/: ci.yaml
codegen/: settings.gradle.kts
designs/: legend.md  polymorphing-dafny-to-java-cbor.md  polymorphing-dafny-to-java-dependencies-blocks.md  polymorphing-dafny-to-java-dependencies.md  polymorphing-dafny-to-java.md  polymorphing-java-to-dafny.md  polymorphing-rust-to-java.md  smithy-client-server-architecture.md
docs/: polymorphing.md
scripts/: sed_replace.sh
(+476 files in other folders)
