[package]
name = "calling_aws_sdk_from_local_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wrapped-client = []

[dependencies]
aws-config = "1.5.8"
aws-smithy-runtime = {version = "1.7.1", features=["client"]}
aws-smithy-runtime-api = {version = "1.7.2", features=["client"]}
aws-smithy-types = "1.2.4"
dafny_runtime = { path = "../../../dafny-dependencies/dafny_runtime_rust"}
aws-sdk-dynamodb = "1.50.0"
aws-sdk-kms = "1.47.0"

[dependencies.tokio]
version = "1.26.0"
features = ["full"]

[dev-dependencies]
calling_aws_sdk_from_local_service = { path = ".", features = ["wrapped-client"] }
